# frozen-django

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README-Upload.rst  README.rst  build.yml  pyproject.toml  requirements-development.txt  requirements-production.txt  run  setup.cfg  setup.py  wscript
etc/: pylint.rc  runner.json
frozen_django/: README.rst  apps.py  main.py  tasks_celery.py  tasks_uwsgi.py
frozen_django/management/commands/: freeze_view.py
frozen_django/tests/: test_command.py  test_main.py
