[metadata]
name = frozen-django
version = 1.0.3
description = Build html files from Django views.
long_description = file: README.rst
url = https://github.com/dozymoe/frozen-django
author = Fahri Reza
author_email = i@dozy.moe
license = MIT
project_urls =
    Bug Tracker = https://github.com/dozymoe/frozen-django/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    bs4
    django
